# goblin-rl

./: Cargo.toml  readme.txt  rusty-tags.vi
mermaid/: class_diagram.md
src/: controller.rs  ctrlr.rs  ecs_access_point.rs  error.rs  main.rs  main_state.rs  user_input.rs
src/common/: mod.rs  transmittables.rs
src/common/command/: message.rs  mod.rs
src/ecs_access_point/: mod.rs  resource_access_guard.rs  storage_access_guard.rs  storage_accessor.rs  storage_guard.rs
src/gameworld/: mod.rs
src/gameworld/components/: mod.rs
src/gameworld/entities/: mod.rs
src/gameworld/map/: mod.rs  tile.rs
src/gameworld/resources/: mod.rs
src/gameworld/resources/map/: map_builder.rs  mod.rs  precon.rs
src/gameworld/systems/: mod.rs
src/gui/: mod.rs
src/gui/observer/: mod.rs
src/gui/user_input/: _old.rs  mod.rs
src/tui/: mod.rs
src/tui/systems/: mod.rs  rendering_system.rs
src/user_input/: mod.rs
